# userspace-xdp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.bc  a.ll  a.out  b.cpp  res.json
af_xdp_simple/: Makefile
afxdp/: Makefile  README.md  config.mk
bench/: .gitignore  Makefile  README.md  explain.md  katran.md  optimize.md  paper.md  plot_mode.py  plot_range.py  plot_size.py  test_all.sh
bpf2c/: .gitignore  Makefile  bpf2c.cpp  bpf_code_generator.cpp  bpf_code_generator.h  ebpf.h
documents/: README.md  af-xdp-ebpf.md  afxdp_basic.md  bpftime-lb.md  bpftime.md  debug-records-on-bench.md  dpdk-ebpf.md  examples.md  katran.json  katran.md  l4lb-details.md  l4lb-ebpf.md  moongen.md  optimize-more.md  optimize.md  pktgen-dpdk.md  syscall.txt  userspace-xdp-lb.md  venv-details.md
dpdk/: .gitignore  Makefile  base.h  config.h  dpdk.c  main.c  net.c
dpdk-lb/: dpdk.c  main.c  net-config.h  net.c
dpdk_l2fwd/: .gitignore  Makefile  main.c
katran/: .gitignore  Makefile  README.md
module/: helpers.c  inline_hash_map.ll  inline_helpers.ll  inline_helpers1.c  inline_helpers1.ll  inline_helpers_all.ll  lpm_trie.h  maps.cpp  runner.cpp  xdp-runtime.cpp  xdp-runtime.h
scripts/: aliases.sh  link-dpdk.sh  moongen-setup.sh  testbed-setup.sh  testbed-teardown.sh
src/: dpdk.c
ssl-nginx/: .gitignore  Makefile  README.md  draw.py  load.sh  nginx.conf  process.py  test-log.txt  test.sh
xdp-dump/: .gitignore  Makefile  main.bpf.c  main.c  main.h
xdp-ebpf/: .gitignore  Makefile  common.h  loader.cpp  xdp_lb.bpf.c
xdp-ebpf-acl/: Makefile  README.md  load_standard_acl.c  standard_acl.bpf.c  standard_acl.c  standard_acl_kern.c
xdp-ebpf-new/: .gitignore  Makefile  README.md  base.btf  base.c  common.h  res.json  xdp_lb.bpf.c  xdp_lb.cpp  xdp_lb.inline.opt.ll  xdp_lb.opt.ll
xdp-firewall/: .gitignore  Makefile  README.md  xdp_firewall.bpf.aot.c  xdp_firewall.bpf.c
xdp-fw/: Makefile  xdp_firewall.bpf.c  xdp_firewall.c
xdp-maps/: README.md
xdp-observer/: Dockerfile  README.md  main.bpf.c  main.c  main.h
xdp-tcpclassify/: README.md  main.bpf.c
xdp_progs/: .gitignore  Makefile  README.md  def.bpf.h  inline_csum.h  inline_helpers.c  optimization.md  tcpclassify.bpf.aot.c  xdp-maps.bpf.c  xdp-tcpclassify.bpf.c  xdp-tcpclassify.c  xdp1  xdp_adjust_tail  xdp_adjust_tail.bpf.c  xdp_adjust_tail.c  xdp_csum.bpf.aot.c  xdp_csum.bpf.c  xdp_csum.bpf.inline.aot.c  xdp_csum.c  xdp_csum_only.bpf.aot.c  xdp_csum_only.bpf.c  xdp_csum_only.bpf.inline.aot.c  xdp_csum_only.c  xdp_drop.bpf.c  xdp_drop.c  xdp_firewall.bpf.c  xdp_fw.bpf.c  xdp_fw.c  xdp_hash_sum.bpf.aot.c  (+25 more)
(+972 files in other folders)
